--- a/Clockrona/app/src/main/res/layout/after_effect.xml
+++ b/Clockrona/app/src/main/res/layout/after_effect.xml
@@ -38,7 +38,7 @@
         <TextView
             android:id="@+id/infoAE"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="후유증 정보 출력 확인용 text">
 
         </TextView>
