--- a/CVD19INFO/app/src/main/res/layout/after_effect_info_layout.xml
+++ b/CVD19INFO/app/src/main/res/layout/after_effect_info_layout.xml
@@ -47,7 +47,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="15dp"
-            android:text="대체로 37.5도 이상의 고열이 나타납니다.\n가장 먼저 나타나는 코로나 증상이 열이 나는 것이므로 체온 측정을 통해 초기 진단, 격리, 치료를 앞당길 수 있습니다."
+            android:text="탈모\n\n한 의과대학 기관에서는 코로나19에 감염됐다가 완치된 1천 567명을 상대로 실시한 설문조사에서, 응답자 중 423명(26.9%)이 코로나19 완치 후 탈모 증상을 경험했다고 답했습니다."
             android:textColor="#000000"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
