--- a/CVD19INFO/app/src/main/res/layout/symptom_info_layout.xml
+++ b/CVD19INFO/app/src/main/res/layout/symptom_info_layout.xml
@@ -47,7 +47,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="15dp"
-            android:text="대체로 37.5도 이상의 고열이 나타납니다.\n가장 먼저 나타나는 코로나 증상이 열이 나는 것이므로 체온 측정을 통해 초기 진단, 격리, 치료를 앞당길 수 있습니다."
+            android:text="발열\n\n대체로 37.5도 이상의 고열이 나타납니다.\n가장 먼저 나타나는 코로나 증상이 열이 나는 것이므로 체온 측정을 통해 초기 진단, 격리, 치료를 앞당길 수 있습니다."
             android:textColor="#000000"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
